17MAI24 - Projeto Museu Nacional - Feito: Aside,Principal (fotos,depoimento) - aula 2/3 finalizada

--- a/index.html
+++ b/index.html
@@ -44,6 +44,68 @@
 
         </header><!-- Fim do Header -->
 
+        <div id="principal">
+
+            <div id="conteudo">
+
+                <section id="capa">
+                    <img src="img/museu.png" alt="">
+                </section>
+
+            </div>
+
+            <aside><!-- Início Aside-->
+
+                <section id="depoimento">
+
+                    <img src="img/depoimento.png" alt="">
+
+                </section>
+
+                <section id="visita"><!-- Início visita -->
+                    <h4>Faça uma visita</h4>
+                    <form action="">
+                        <fieldset>
+
+                            <legend>Selecione uma data</legend>
+
+                            <label for="data">Data</label>
+                            <input class="campo" type="text" id="data" value="dd/mm/aaaa">
+
+                            <label for="qtd">Qtd pessoas</label>
+                            <input class="campo" style="width: 30px;" type="text" 
+                            id="qtd" value="1">
+
+                        </fieldset>
+
+                        <input class="botao" type="submit" value="Verificar disponibilidade">
+
+                    </form>
+                </section><!-- Fim visita -->
+
+                <section id="galeria">
+                    <h4>Galeria de fotos</h4>
+                    <a href="">
+                        <img src="img/imagem1.jpg" alt="vitrines" height="93" width="93">
+                    </a>
+
+                    <a href="">
+                        <img src="img/imagem2.jpg" alt="peças de antiquário" height="93" width="93">
+                    </a>
+
+                    <a href="">
+                        <img src="img/imagem3.jpg" alt="vestido antigo" height="93" width="93">
+                    </a>
+
+                    <a href="">
+                        <img src="img/imagem4.jpg" alt="obras de arte" height="93" width="93">
+                    </a>
+                </section>
+
+            </aside><!-- Fim Aside-->
+
+        </div>
+
     </div><!-- Fim do Container -->
     
 </body>
